# Canopy

./: .dockerignore  .gitignore  CHANGELOG (MSI's conflicted copy 2026-02-22).md  CHANGELOG.md  Dockerfile  README.md  __init__.py  canopy_mcp_server.py  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  setup.sh  start_canopy_testnet.sh
.github/: TOPICS.md
canopy/: __init__ (MSI's conflicted copy 2026-02-22).py  __init__.py  __main__.py  main.py
canopy/core/: app.py  (+29 more)
canopy_tray/: __init__.py  __main__.py  app.py  build.spec  icons.py  monitor.py  notifier.py  requirements.txt  server.py
docs/: AGENT_ONBOARDING.md  API_REFERENCE.md  CANOPY_DECK_WIDGET_MANIFEST_V1.md  CANOPY_MODULE_RUNTIME_V1.md  CANOPY_SOURCE_LAYOUT_V1.md  CREATOR_LOCKED_MODULES_V1_ARCHITECTURE.md  DECK_COLLECTIONS_V1_ARCHITECTURE.md  GITHUB_RELEASE_ANNOUNCEMENT_DRAFT.md  GITHUB_RELEASE_TEMPLATE.md  GITHUB_RELEASE_v0.4.100.md  GITHUB_RELEASE_v0.4.52.md  GITHUB_RELEASE_v0.4.54.md  GITHUB_RELEASE_v0.4.55.md  GITHUB_RELEASE_v0.4.59.md  GITHUB_RELEASE_v0.4.60.md  GITHUB_RELEASE_v0.4.64.md  GITHUB_RELEASE_v0.4.68.md  GITHUB_RELEASE_v0.4.78.md  GITHUB_RELEASE_v0.4.79.md  GITHUB_RELEASE_v0.4.80.md  GITHUB_RELEASE_v0.4.81.md  GITHUB_RELEASE_v0.4.83.md  GITHUB_RELEASE_v0.4.89.md  GITHUB_RELEASE_v0.4.90.md  IDENTITY_PORTABILITY_TESTING.md  MCP_QUICKSTART.md  MENTIONS.md  PEER_CONNECT_GUIDE.md  QUICKSTART.md  RELEASE_NOTES_0.4.0.md  SECURITY_ASSESSMENT.md  SECURITY_IMPLEMENTATION_SUMMARY.md  SPREADSHEETS.md  TEAM_ANNOUNCEMENT_0.4.0.md  WINDOWS_TRAY.md
scripts/: build_tray_windows.ps1  bump_version.py  canopy_tray_installer.iss  check_jinja_templates.py  deploy_to_github_mcp.py  fetch_recent_general_messages.py  filter_python_diagnostics_to_diff.py  list_pushable_files.py  post_inbox_audit_request_to_general.py  push_docs_to_github.py  push_one_file_mcp.py  push_to_github.py  sync_to_github_folder.py  validate_github_sync.py
tests/: public_ci_tests.txt  test_admin_channel_member_sync_diagnostics.py  test_admin_channel_reconcile_delete.py  test_admin_user_workspace.py  test_agent_reliability_endpoints.py  (+94 more)
(+45 files in other folders)
